--- a/auth/go_task/Taskfile.yaml
+++ b/auth/go_task/Taskfile.yaml
@@ -9,4 +9,4 @@ tasks:
       - gen  
     desc: "Generate go-proto files"  
     cmds:  ## Тут описываем необходимые bash-команды
-      - protoc -I ../proto -I googleapis ../proto/sso/*.proto --go_out=../gen/go/ --go_opt=paths=source_relative --go-grpc_out=../gen/go/ --go-grpc_opt=paths=source_relative --grpc-gateway_out=../gen/go/ --grpc-gateway_opt=paths=source_relative --openapiv2_out=../gen/go/ --openapiv2_opt=allow_merge=true,merge_file_name=api
+      - protoc -I ../proto -I googleapis ../proto/sso/v1/*.proto --go_out=../gen/go/ --go_opt=paths=source_relative --go-grpc_out=../gen/go/ --go-grpc_opt=paths=source_relative --grpc-gateway_out=../gen/go/ --grpc-gateway_opt=paths=source_relative --openapiv2_out=../gen/go/ --openapiv2_opt=allow_merge=true,merge_file_name=api
